--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
-DB_PORT=8889
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=admin123
 DB_NAME=eiii_kommerce
 CLOUDINARY_CLOUD_NAME=ddphybme7
 CLOUDINARY_API_KEY=993334852297312
